# CatClipboard

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: generate_icons.py
src/: App.tsx  icons.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: clipboard.rs  config.rs  database.rs  lib.rs  main.rs
src/types/: tauri-plugin-global-shortcut.d.ts
