[package]
name = "cut-history-app"
version = "0.1.0"
description = "A lightweight clipboard history manager with Apple-style UI"
authors = ["YouGo"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "cut_history_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled", "modern_sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"
image = "0.25.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
